fluxcd/infrastructure/services/overlays/production/phase-04-platform/vaultwarden/statefulset-db-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden-db
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: postgres
        image: docker.io/postgres:18
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - $patch: replace
        - name: zeldas-lullaby-vaultwarden-postgres
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
  volumeClaimTemplates:
  - metadata:
      name: zeldas-lullaby-vaultwarden-postgres
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 10Gi
