fluxcd/infrastructure/services/overlays/production/phase-04-platform/vaultwarden/service-vaultwarden-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    policy.prplanit.com/ingress: "true"
