fluxcd/infrastructure/services/overlays/production/phase-04-platform/vaultwarden/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Administration (Zelda's Lullaby🎵)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "bitwarden.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
