fluxcd/infrastructure/services/overlays/production/phase-04-platform/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: zeldas-lullaby
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Administration (Zelda's Lullaby🎵)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "vw.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
